Fix background behind classes not scrolling correctly.

--- a/src/ui/realm-browser/RealmBrowser.scss
+++ b/src/ui/realm-browser/RealmBrowser.scss
@@ -33,6 +33,7 @@ $realm-browser-header-handle-width: 8px;
       justify-content: space-between;
       list-style: none;
       padding: $spacer / 2;
+      background: $window-background;
 
       &:hover,
       &:focus {
